{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "824d9dce-bafd-47af-9efb-7cd8026eb644",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "eda200c0-284b-4897-935b-77ae51667a21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "14c74176-544f-44a7-b567-fbf3cd759131",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchTap",
                    "type": "Button",
                    "id": "579661be-0678-470d-b511-b7634267f3b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchHold",
                    "type": "Button",
                    "id": "9723bed1-fe18-4316-ab71-f71d808b10ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e2f2d031-8c2e-4c8a-93c9-2579ca2b74f6",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5a32e04-5d6a-4609-adf6-b34d59cb8573",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "233fd42a-1334-4cb2-874e-89cd7d863127",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "574be32b-5a62-441c-94ef-28ed4ce5fe16",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}